fix code scan detection of command injection
due to this not being a user-controlled value, this isn't a true vuln
but fixing it this way makes the scanner happy